Third for 0520 for Enix

--- a/intex.html
+++ b/intex.html
@@ -4,14 +4,14 @@
 <head>
 
     <title>Square Enix</title>
-    <a rel="stylesheet" href="assets/css/style.css"></a>
+    <link rel="stylesheet" href="assets/css/style.css"></a>
 </head>
 
 <body>
 
     <!--        Navigation-->
     <header>
-        <img src="assets/img/logo.png">
+        <img src="assets/enixassets-master/img/logo.png">
         <nav>
             <ul>
                 <li><a href="intex.html">HOME</a></li>
