4th for 0520 for Enix

--- a/intex.html
+++ b/intex.html
@@ -26,11 +26,11 @@
 
     </header>
     <!--       hero-->
-    <div id="here">
+    <div id="hero">
 
         <div class="overlay">
 
-            <div id="herecontent">
+            <div id="herocontent">
                 <h1>Welcome to Enix Toys</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
