--- a/intex.html
+++ b/intex.html
@@ -5,6 +5,7 @@
 
     <title>Square Enix</title>
     <link rel="stylesheet" href="assets/css/style.css"></a>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
