my own fifith commit

--- a/intex.html
+++ b/intex.html
@@ -4,7 +4,7 @@
 <head>
 
     <title>Square Enix</title>
-    <link rel="stylesheet" href="assets/css/style.css"></a>
+   <link rel="stylesheet" href="assets/css/style.css">
     
     
 <!--    link for awesome icon-->
